--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <div id="modal"></div>
+    <div id="toaster"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
